# imu-fungen

./: .gitignore  CMakeLists.txt  run  run.sh  runconfig
examples/: CMakeLists.txt  main.cpp
include/: imufungen.h  mathfunctions.h
src/: imufungen.cpp  main.cpp  mathfunctions.cpp
test/: CMakeLists.txt  unit.cpp
